// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageWrapper /> should render and match the snapshot 1`] = `
.c0 {
  height: 90px;
  margin: 4.5rem 0;
  width: 100%;
  text-align: center;
}

@media (min-width:425px) {
  .c0 {
    height: 900px;
  }
}

<div
  className="c0"
/>
`;

exports[`<ImageWrapper /> should render without any props given 1`] = `
.c0 {
  height: auto;
  margin: 4.5rem 0;
  width: 100%;
  text-align: center;
}

<div
  className="c0"
/>
`;
